# codewars

./: .gitignore  README.md  codewars.norg  codewars.org
go/: Makefile  go.mod
go/cmd/: codewars_main.go
go/codewars/: codewars_main.go
go/codewars/base91/: base91.go
go/codewars/bouncing/: bouncing.go  bouncing_test.go
go/codewars/cartesianDistance/: cartesianDistance.go  cartesianDistance_test.go
go/codewars/cartesianNeighbors/: CartesianNeighbor.go  cartesianNeighbors_test.go
go/codewars/coordinates/: coordinates_test.go
java/: pom.xml
python/: Pipfile  README  pyproject.toml  requirements.txt
python/DynamicConnectivity/: connect.py
python/TCP_machine/: tcp.py  tests.py
python/anagrams/: anagrams.py
python/battleship/: battleship.py  test_ship.py  tests.py
python/calculator/: calculator.py  calculator_test.py
python/chameleon-unity/: chameleon.py  tests.py
python/differentiateAPolynomial/: differentiate.py  tests.py
python/gameOfLife/: main.py  test.py
python/multipleOf3and5/: multiples.py  tests.py
python/notVerysecure/: notVerySecure.py  tests.py
python/parseInt/: parseint.py  tests.py
python/roman_numerals/: roman_numerals.py  tests.py
python/rpn/: rpn.py  tests.py
python/secrets/: secrets.py  tests.py
python/sort-binary-trees/: tests.py  trees.py
python/weight-for-weight/: tests.py  wfw.py
python/wordCount/: tests.py  wordCount.py
rust/src/: chaser.rs  main.rs  max_sequence.rs  mini_string_fuck.rs  powerset.rs  queues.rs  remove_pars.rs  rgb_conversion.rs  split_strings.rs  vowel_count.rs
scala/: build.sbt
(+87 files in other folders)
