[tool.poetry]
name = "codewars"
version = "0.1.0"
description = ""
authors = ["Jero"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = {version = "^1.26.0", python="^3.10,<3.13"}
pyright = "^1.1.333"
debugpy = "^1.8.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
